--- a/P01/source/noteb.ipynb
+++ b/P01/source/noteb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "INPUT_PATH = \"../input/\"\n",
     "OUTPUT_PATH = \"../output/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 52\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[38;5;66;03m# Convert to binary\u001b[39;00m\n\u001b[1;32m     50\u001b[0m _, binary_img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mthreshold(img, \u001b[38;5;241m128\u001b[39m, \u001b[38;5;241m255\u001b[39m, cv2\u001b[38;5;241m.\u001b[39mTHRESH_BINARY)\n\u001b[0;32m---> 52\u001b[0m convex_hull_image \u001b[38;5;241m=\u001b[39m \u001b[43mconvex_hull\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbinary_img\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     53\u001b[0m \u001b[38;5;28mprint\u001b[39m(convex_hull_image)\n\u001b[1;32m     55\u001b[0m \u001b[38;5;66;03m# Display results\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[6], line 35\u001b[0m, in \u001b[0;36mconvex_hull\u001b[0;34m(img, Bs)\u001b[0m\n\u001b[1;32m     33\u001b[0m cv2\u001b[38;5;241m.\u001b[39mimshow(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcurr\u001b[39m\u001b[38;5;124m\"\u001b[39m, X_current[i])\n\u001b[1;32m     34\u001b[0m cv2\u001b[38;5;241m.\u001b[39mimshow(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprev\u001b[39m\u001b[38;5;124m\"\u001b[39m, X_prev)\n\u001b[0;32m---> 35\u001b[0m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwaitKey\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m500\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m np\u001b[38;5;241m.\u001b[39marray_equal(X_current[i], X_prev):\n\u001b[1;32m     38\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "\n",
+    "def union_image(img1, img2):\n",
+    "    return np.maximum(img1, img2)\n",
+    "\n",
+    "def convex_hull(img, Bs=None):\n",
+    "    if Bs is None:\n",
+    "        # Default using left, right, top, bottom borders\n",
+    "        tmp_kernel = np.full((3, 3), 0)\n",
+    "        tmp_kernel[1, 1] = -1\n",
+    "        Bs = [tmp_kernel.copy() for _ in range(4)]\n",
+    "        \n",
+    "        Bs[0][:, 0] = 1 # left\n",
+    "        Bs[1][0, :] = 1 # top\n",
+    "        Bs[2][:, -1] = 1 # right\n",
+    "        Bs[3][-1, :] = 1 # bottom\n",
+    "    \n",
+    "    X_current = [img.copy() for _ in range(len(Bs))]\n",
+    "    \n",
+    "    for i in range(len(X_current)):\n",
+    "        while True:\n",
+    "            X_prev = X_current[i].copy()\n",
+    "            hitmiss_result = cv2.morphologyEx(X_prev, cv2.MORPH_HITMISS, Bs[i])\n",
+    "            X_current[i] = union_image(hitmiss_result, img)\n",
+    "\n",
+    "            cv2.imshow(\"curr\", X_current[i])\n",
+    "            cv2.imshow(\"prev\", X_prev)\n",
+    "            cv2.waitKey(500)\n",
+    "            \n",
+    "            if np.array_equal(X_current[i], X_prev):\n",
+    "                break\n",
+    "    \n",
+    "    # Union D (last X) to get C(A)\n",
+    "    res = X_current[0]\n",
+    "    for i in range(1, len(X_current)):\n",
+    "        res = union_image(res, X_current[i])\n",
+    "    return res\n",
+    "\n",
+    "# Example usage\n",
+    "img =  cv2.imread(INPUT_PATH + \"ratchet.jpg\", 0)\n",
+    "\n",
+    "# Convert to binary\n",
+    "_, binary_img = cv2.threshold(img, 128, 255, cv2.THRESH_BINARY)\n",
+    "\n",
+    "convex_hull_image = convex_hull(binary_img[:, :100])\n",
+    "print(convex_hull_image)\n",
+    "\n",
+    "# Display results\n",
+    "cv2.imshow('Original Image', binary_img)\n",
+    "cv2.imshow('Convex Hull', convex_hull_image)\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()\n"
    ]
   },
   {
