finish binary operators

--- a/P01/source/noteb.ipynb
+++ b/P01/source/noteb.ipynb
@@ -37,62 +37,42 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[ WARN:0@0.054] global loadsave.cpp:241 findDecoder imread_('../output/binary.jpg'): can't open/read file: check file path/integrity\n"
-     ]
-    },
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.10.0) /io/opencv/modules/highgui/src/window.cpp:973: error: (-215:Assertion failed) size.width>0 && size.height>0 in function 'imshow'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mread_output\u001b[49m\u001b[43m(\u001b[49m\u001b[43mOUTPUT_PATH\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mbinary.jpg\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[3], line 4\u001b[0m, in \u001b[0;36mread_output\u001b[0;34m(path, wait_key_time)\u001b[0m\n\u001b[1;32m      2\u001b[0m img_gray \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(path, \u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      3\u001b[0m (thresh, img) \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mthreshold(img_gray, \u001b[38;5;241m128\u001b[39m, \u001b[38;5;241m255\u001b[39m, cv2\u001b[38;5;241m.\u001b[39mTHRESH_BINARY \u001b[38;5;241m|\u001b[39m cv2\u001b[38;5;241m.\u001b[39mTHRESH_OTSU)\n\u001b[0;32m----> 4\u001b[0m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimshow\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43moutput\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mimg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m cv2\u001b[38;5;241m.\u001b[39mwaitKey(wait_key_time)\n\u001b[1;32m      6\u001b[0m cv2\u001b[38;5;241m.\u001b[39mdestroyAllWindows()\n",
-      "\u001b[0;31merror\u001b[0m: OpenCV(4.10.0) /io/opencv/modules/highgui/src/window.cpp:973: error: (-215:Assertion failed) size.width>0 && size.height>0 in function 'imshow'\n"
-     ]
-    }
-   ],
-   "source": [
-    "read_output(OUTPUT_PATH + \"binary.jpg\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
    "outputs": [],
    "source": [
     "import cv2 as cv\n",
     "import numpy as np\n",
     "\n",
-    "img_gray = cv2.imread(INPUT_PATH + \"pixil-frame-0.png\", 0)\n",
+    "img_gray = cv2.imread(INPUT_PATH + \"sma.png\", 0)\n",
     "(thresh, img) = cv2.threshold(img_gray, 128, 255, cv2.THRESH_BINARY | cv2.THRESH_OTSU)\n",
     "\n",
-    "input_image = img\n",
+    "\n",
+    "cv.imshow(\"Original\", img)\n",
     "\n",
     "kernel = np.array((\n",
-    "        [1, 0, 0],\n",
-    "        [1, -1, 0],\n",
-    "        [1, 0, 0]), dtype=\"int\")\n",
-    "cv.imshow(\"Original\", input_image)\n",
-    "output_image = binary.union_image(binary.hitmiss(input_image, kernel), input_image)\n",
-    "cv.imshow(\"Hit or Miss\", output_image)\n",
+    "        [-1, -1, -1],\n",
+    "        [0, 1, 0],\n",
+    "        [1, 1, 1]), dtype=\"int\")\n",
+    "output_image = binary.thinning(img, kernel)\n",
+    "cv.imshow(\"Res\", output_image)\n",
     "cv.waitKey(0)\n",
-    "output_image = binary.union_image(binary.hitmiss(output_image, kernel), input_image)\n",
-    "cv.imshow(\"Hit or Miss\", output_image)\n",
+    "\n",
+    "kernel = np.array((\n",
+    "        [0, -1, -1],\n",
+    "        [1, 1, -1],\n",
+    "        [1, 1, 0]), dtype=\"int\")\n",
+    "output_image = binary.thinning(output_image, kernel)\n",
+    "cv.imshow(\"Res\", output_image)\n",
     "cv.waitKey(0)\n",
-    "output_image = binary.union_image(binary.hitmiss(output_image, kernel), input_image)\n",
-    "cv.imshow(\"Hit or Miss\", output_image)\n",
+    "\n",
+    "\n",
+    "kernel = np.array((\n",
+    "        [1, 0, -1],\n",
+    "        [1, 1, -1],\n",
+    "        [1, 0, -1]), dtype=\"int\")\n",
+    "output_image = binary.thinning(output_image, kernel)\n",
+    "cv.imshow(\"Res\", output_image)\n",
     "cv.waitKey(0)\n",
-    "output_image = binary.union_image(binary.hitmiss(output_image, kernel), input_image)\n",
-    "cv.imshow(\"Hit or Miss\", output_image)\n",
-    "cv.waitKey(0)\n",
+    "\n",
     "cv.destroyAllWindows()"
    ]
   }
