complete grayscale part

--- a/P01/source/noteb.ipynb
+++ b/P01/source/noteb.ipynb
@@ -122,26 +122,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0],\n",
-       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
-       "       [0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]], dtype=uint8)"
+       "array([[0, 0, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 0, 0]], dtype=uint8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +141,7 @@
    "source": [
     "import mahotas \n",
     "import numpy as np\n",
-    "radius = 5\n",
+    "radius = 1\n",
     "mahotas.disk(radius).astype(np.uint8)"
    ]
   },
