--- a/P01/source/noteb.ipynb
+++ b/P01/source/noteb.ipynb
@@ -2,11 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from main import *"
+    "from binary_main import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Bs = [None for _ in range(8)]\n",
+    "Bs[0] = np.array([[-1, -1, -1],\n",
+    "                [0, 1, 0],\n",
+    "                [1, 1, 1]], dtype=np.int8) # B1\n",
+    "Bs[2], Bs[4], Bs[6] = [np.rot90(Bs[0], k + 1, axes=(1,0)) for k in range(3)]\n",
+    "Bs[1] = np.array([[0, -1, -1],\n",
+    "                [1, 1, -1],\n",
+    "                [1, 1, 0]], dtype=np.int8) # B2\n",
+    "Bs[3], Bs[5], Bs[7] = [np.rot90(Bs[1], k + 1, axes=(1,0)) for k in range(3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  1],\n",
+       "       [-1,  1,  1],\n",
+       "       [-1, -1,  0]], dtype=int8)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Bs[5]"
    ]
   },
   {
@@ -21,192 +60,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[False, False, False, False, False],\n",
-       "       [False,  True,  True,  True, False],\n",
-       "       [False,  True,  True,  True, False],\n",
-       "       [False,  True,  True,  True, False],\n",
-       "       [False, False, False, False, False]])"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import mahotas\n",
-    "radius = 5\n",
-    "mahotas.morph.disk(radius // 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "radius = 5\n",
-    "L = np.arange(-radius, radius+1)\n",
-    "X, Y = np.meshgrid(L, L)\n",
-    "disk = (X**2 + Y**2) <= radius**2\n",
-    "disk.astype(np.uint8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0],\n",
-       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "       [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "       [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
-       "       [0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "radius = 5\n",
-    "\n",
-    "kernel = np.zeros((2*radius+1, 2*radius+1) ,np.uint8)\n",
-    "y,x = np.ogrid[-radius:radius+1, -radius:radius+1]\n",
-    "mask = x**2 + y**2 <= radius**2\n",
-    "kernel[mask] = 1\n",
-    "kernel[0,radius-1:kernel.shape[1]-radius+1] = 1\n",
-    "kernel[kernel.shape[0]-1,radius-1:kernel.shape[1]-radius+1]= 1\n",
-    "kernel[radius-1:kernel.shape[0]-radius+1,0] = 1\n",
-    "kernel[radius-1:kernel.shape[0]-radius+1,kernel.shape[1]-1] = 1\n",
-    "kernel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0],\n",
-       "       [0, 1, 0],\n",
-       "       [0, 0, 0]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import mahotas \n",
-    "import numpy as np\n",
-    "radius = 1\n",
-    "mahotas.disk(radius).astype(np.uint8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "       [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "       [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "       [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "       [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import cv2\n",
-    "radius = 5\n",
-    "cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (2 * radius + 1, 2 * radius + 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0],\n",
-       "       [0, 0, 1, 1, 1, 1, 1, 1, 1, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import skimage\n",
-    "skimage.morphology.disk(5)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
